Version 2.6.0
~~~~~~~~~~~~~
* Post DiFX-2.5
* Allow mount command to work on label rather than device
* listfs command to list available filesystems with labels
* mk5cp support for append mode: will continue writing partial files of matching filenames

Version 2.5.0
~~~~~~~~~~~~~
* Count number of streamstor cards and if < 1, don't consider the unit to be a Mark5 unit.
* mk5cp: don't rewrite directory file unnecessarily
* Look for sigterm; tie to same exit routine as sigint
* A few cleanups
* mk5map now works better on mk5b data.  Still ugly.
* Support for SDK 9.4: SS_MODE_PCI (default mode) is no longer an option, so don't set it.
* Initial support for Mark6 units through the mark6meta library
* Initial support for command line structure
* mk5dir: can override (presumably incorrect) directory version number with --version1
* mk5dir: no seg fault if cannot open output file
* Adopt scripts listcpus and listmodules from calcif2 as this is a more natural home.
* mk5erase: new option to overwrite module partition.  Might be useful for firmware upgrades.
* Change .rpm filename to vlbi-mk5daemon.*.rpm
* mk5cp: report average data rate and total bytes copied.  Use replaced byte counter with lower false detection rate.
* Periodically (every 30 sec) look at OS swap usage and emit alert if in use
* mk5putdir: if binary dump file cannot be created, don't seg fault; instead tell user.
* mk5daemon: add message handling for starting and stopping fuseMk5
* mk5lock: added support for fuseMk5 locks
* mk5control: added new commands to start and stop fuseMk5
* startfusemk5: new utility to start fuseMk5
* stopfuseMk5: new utility to stop fuseMk5
* Use sigaction for signal handling
* REVERT to signal() for signal handling in programs linking to streamstor
library!  mixing signal() (used within streamstor library) and sigaction() causes problems! 
* Better handling of interruption in mk5cp
* Version for DiFX-2.5, May 16, 2017

Version 2.4.0
~~~~~~~~~~~~~